# Loup3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
assets/maps/: a  small
inc/: conf.h  game_engine.h  graphics.h  inputs.h  utils.h
inc/struct/: cast.h  color.h  player.h
include/: conf.h  game_engine.h  gaming.h  graphics.h  inputs.h
include/struct/: cast.h  color.h  player.h  vector.h
src/: Graphic.cpp  Graphic.hpp  Inputs.cpp  Inputs.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Raycasting.cpp  Raycasting.hpp  game_engine.c  gaming.c  graphics.c  inputs.c
src/Helpers/: Image.hpp
src/shaders/: compute_shader.shader  raycasting.shader
src/struct/: cast.c  color.c  player.c  vector.c
